--- a/css/styles.css
+++ b/css/styles.css
@@ -99,11 +99,44 @@ nav {
     background-color: #ff00008a;
 }
 
+/* SLIDER CUSTOMIZATATION */
+
+.hero-content .swiper-button-prev,
+.hero-content .swiper-button-next {
+    --swiper-navigation-size: 20px;
+    background-color: #fff;
+    height: 70px;
+    width: 50px;
+    margin-top: -35px;
+    opacity: 0;
+    transition: all 0.3s;
+}
+
+.hero-content .swiper-button-prev{
+    border-radius: 0 65px 65px 0;
+    left: 9px;
+}
+
+.hero-content .swiper-button-next{
+    border-radius: 65px 0 0 65px;
+    right: 9px;
+}
+
+.hero-content .swiper-button-prev:hover, .hero-content .swiper-button-next:hover {
+
+    opacity: 0.8;
+}
+
+.hero-content {
+    --swiper-theme-color: gray; /* color general (puntos y botones) */
+    --swiper-navigation-color: gray;
+}
+
 /* SECTIONS GENERAL */
 
 .menu-section, .book-section, .contact-section {
     padding: 5rem 3rem;
-    background-color: azure;
+    background-color: rgb(246, 250, 250);
     text-align: center;
 }
 
@@ -184,6 +217,8 @@ footer{
 
 @media (max-width: 768px) {
 
+    /* HEADER SECTION */
+
     header{
         position: static;
     }
@@ -201,7 +236,17 @@ footer{
         margin-top: 15px;
     }
 
+    /* GENERAL */
+    
     .menu-grid .menu-item {
-        flex: 0 0 calc(50% - 20px);
+        flex: 0 0 calc(50% - 10px);
+    }
+
+    .menu-section, .book-section, .contact-section {
+        padding: 5rem 2rem;
+    }
+
+    .menu-grid {
+        justify-content: space-between;
     }
 }
